force-app/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <label>Applicant</label>
    <nameField>
        <displayFormat>APID-{0000}</displayFormat>
        <label>Applicant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>