force-app/main/default/objects/Application__c/fields/Applicant_Types__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Types__c</fullName>
    <description>This is check applicant is major or minor.</description>
    <formula>IF( Age__c &gt;=18, &apos;major&apos;,&apos;minor&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Types</label>
    <type>Text</type>
</CustomField>