force-app/main/default/objects/Application__c/fields/Eligible__c.field-meta.xml
<CustomField>
    <fullName>Eligible__c</fullName>
    <formula>IF( Applicant_Types__c ==&apos;major&apos;,
IMAGE(&apos;https://infoses2-dev-ed.develop.file.force.com/servlet/servlet.ImageServer?id=0152w000002ItGr&amp;oid=00D2w00000LdNvw&amp;lastMod=1684569297000&apos;, &apos;&apos;, 20, 20)  , 
IMAGE(&apos;https://infoses2-dev-ed.develop.file.force.com/servlet/servlet.ImageServer?id=0152w000002ItGw&amp;oid=00D2w00000LdNvw&amp;lastMod=1684569354000&apos;, &apos;&apos; , 20, 20)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible</label>
    <type>Text</type>
</CustomField>