force-app/main/default/objects/Application__c/fields/PAN_Card__c.field-meta.xml
<CustomField>
    <fullName>PAN_Card__c</fullName>
    <externalId>true</externalId>
    <label>PAN Card</label>
    <length>11</length>
    <type>Text</type>
</CustomField>