force-app/main/default/objects/Application__c/fields/Police_Verification__c.field-meta.xml
<CustomField>
    <fullName>Police_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Police Verification</label>
    <type>Checkbox</type>
</CustomField>