force-app/main/default/objects/Application__c/fields/Required_Document_List__c.field-meta.xml
<CustomField>
    <fullName>Required_Document_List__c</fullName>
    <label>Required Document List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aadhar Card</fullName>
            </value>
            <value>
                <fullName>PassPort</fullName>
            </value>
            <value>
                <fullName>Address Proof</fullName>
            </value>
            <value>
                <fullName>PAN Card</fullName>
            </value>
            <value>
                <fullName>Voter ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>