force-app/main/default/objects/Application__c/fields/Special_Mark_on_Body__c.field-meta.xml
<CustomField>
    <fullName>Special_Mark_on_Body__c</fullName>
    <label>Special Mark on Body</label>
    <type>TextArea</type>
</CustomField>