force-app/main/default/objects/Application__c/fields/Voter_id__c.field-meta.xml
<CustomField>
    <fullName>Voter_id__c</fullName>
    <label>Voter id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>