force-app/main/default/objects/Application__c/validationRules/First_name_is_min_3_characlter.validationRule-meta.xml
<ValidationRule>
    <fullName>First_name_is_min_3_characlter</fullName>
    <active>false</active>
    <description>First Name is character not less than 3</description>
    <errorConditionFormula>LEN( First_Name__c )&lt;3</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>insert minimum 3 character</errorMessage>
</ValidationRule>