force-app/main/default/objects/Application__c/validationRules/prevent_age_less_than_18.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_age_less_than_18</fullName>
    <active>false</active>
    <description>Prevent Application Record to Store if ,Age&lt;18</description>
    <errorConditionFormula>Age__c &lt;18</errorConditionFormula>
    <errorDisplayField>DOB__c</errorDisplayField>
    <errorMessage>Minor Applicant is not allowed.</errorMessage>
</ValidationRule>