force-app/main/default/objects/Application__c/validationRules/prevent_app_Adhar_card_reqiured.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_app_Adhar_card_reqiured</fullName>
    <active>false</active>
    <description>applicant is required aadhar card.</description>
    <errorConditionFormula>NOT( INCLUDES ( Required_Document_List__c , &apos;aaDhar Card&apos;))</errorConditionFormula>
    <errorDisplayField>Required_Document_List__c</errorDisplayField>
    <errorMessage>Aadhar card is Required</errorMessage>
</ValidationRule>