force-app/main/default/objects/Application__c/validationRules/Prevent_minor_app_Male_and_Female.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_minor_app_Male_and_Female</fullName>
    <active>false</active>
    <description>Do not allow Application if  gender is &apos;Male&apos; and &apos;Female&apos;</description>
    <errorConditionFormula>AND(
 Age__c &lt;18, 
     OR(       
         ISPICKVAL( Gender__c ,&apos;Male&apos;) ,
        ISPICKVAL( Gender__c ,&apos;Female&apos;)
      )
    )</errorConditionFormula>
    <errorDisplayField>Gender__c</errorDisplayField>
    <errorMessage>Minor Applicant With Gender male or Female is Current not allows.</errorMessage>
</ValidationRule>