force-app/main/default/objects/Application__c/validationRules/prevent_mobile_no_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_mobile_no_validation</fullName>
    <active>false</active>
    <description>not allow to alphabeted and special character.</description>
    <errorConditionFormula>NOT(REGEX(  Mobile_Number__c , &quot;(\\d){10}&quot;))</errorConditionFormula>
    <errorDisplayField>Mobile_Number__c</errorDisplayField>
    <errorMessage>only allow to number.</errorMessage>
</ValidationRule>