force-app/main/default/objects/Application__c/validationRules/prevent_pan_card_value.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_pan_card_value</fullName>
    <active>false</active>
    <description>pan card not blank value.</description>
    <errorConditionFormula>ISBLANK( PAN_Card__c )</errorConditionFormula>
    <errorDisplayField>PAN_Card__c</errorDisplayField>
    <errorMessage>pan card can not blank.</errorMessage>
</ValidationRule>