force-app/main/default/objects/Application__c/listViews/full_Detail_user.listView-meta.xml
<ListView>
    <fullName>full_Detail_user</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Gender__c</columns>
    <filterScope>Mine</filterScope>
    <label>full Detail user</label>
</ListView>