force-app/main/default/objects/Application__c/listViews/USERvIWE.listView-meta.xml
<ListView>
    <fullName>USERvIWE</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Gender__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Email__c</columns>
    <columns>Police_Verification__c</columns>
    <filterScope>Everything</filterScope>
    <label>USER</label>
</ListView>